начал писать адаптив для планшетной версии

--- a/index copy.html
+++ b/index copy.html
@@ -12,7 +12,7 @@
 <body class="page">
   <header class="main-header">
     <div class="container header__container">
-      <img src="img/logo.svg" alt="Логотив сервиса Wish List в виде буквы W" class="main-logo">
+      <img src="img/logo.svg" alt="Логотип сервиса Wish List в виде буквы W" class="header__logo">
 
       <nav class="header__nav nav">
         <button class="nav__btn btn">Зарегистрироваться</button>
