--- a/index copy.html
+++ b/index copy.html
@@ -14,7 +14,7 @@
     <div class="container header__container">
       <img src="img/logo.svg" alt="Логотип сервиса Wish List в виде буквы W" class="header__logo">
 
-      <nav class="header__nav nav">
+      <nav class="header__nav nav nav_active">
         <button class="nav__btn btn">Зарегистрироваться</button>
         <button class="nav__btn btn">Войти</button>
       </nav>
