--- a/index copy.html
+++ b/index copy.html
@@ -28,7 +28,7 @@
   <main class="app">
     <section class="hero">
       <div class="container hero__container">
-        <h1 class="hero__title">WishList</h1>
+        <h1 class="hero__title"><span>Wish</span>List<span></span></h1>
 
         <p class="hero__description">Никогда не поздно поставить новую цель или обрести новую мечту...</p>
 
