мелкие правки и исправления ошибок

--- a/index copy.html
+++ b/index copy.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="page">
-  <header class="main-header">
+  <header class="header">
     <div class="container header__container">
       <img src="img/logo.svg" alt="Логотип сервиса Wish List в виде буквы W" class="header__logo">
 
@@ -73,37 +73,37 @@
 
             <ul class="wishlist__items">
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
               </li>
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
               </li>
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
               </li>
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
               </li>
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
               </li>
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
@@ -115,19 +115,19 @@
 
             <ul class="wishlist__items">
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
               </li>
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
               </li>
               <li class="item">
-                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__img">
+                <img src="img/buds.jpg" alt="Xiaomi Redmi Buds 4 Pro" class="item__image">
                 <h4 class="item__title">Xiaomi Redmi Buds 4 Pro</h4>
                 <p class="item__price">5800 руб.</p>
                 <button class="item__btn btn btn_castling">Выбрать</button>
@@ -142,7 +142,7 @@
       <div class="container">
         <form class="edit__form">
           <fieldset class="edit__avatar">
-            <img src="img/avatar.jpg" alt="" class="edit__avatar-img">
+            <img src="img/avatar.jpg" alt="" class="edit__avatar-image">
 
             <div class="edit__avatar-load">
               <label for="avatar-load" class="edit__label-avatar">
@@ -204,7 +204,7 @@
 
           <fieldset class="edit__description">
             <label class="edit__label-text" for="description">Вступительный текст:</label>
-            <textarea class="edit__desc-input" name="description"></textarea>
+            <textarea class="edit__description-input" name="description"></textarea>
           </fieldset>
 
           <button class="edit__submit-btn btn">Сохранить изменения</button>
