написал функцию createBurgerMenu, начал писать функцию renderModal - рендер модального окна через js

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="style/index.css">
   <title>Wish List - список желаний</title>
 
+  <script src="scripts/director.min.js" defer></script>
   <script src="scripts/index.js" type="module"></script>
 </head>
 
 <body class="page">
-  <header class="main-header">
+  <header class="header">
     <div class="container header__container">
       <a href="/">
         <img src="img/logo.svg" alt="Логотив сервиса Wish List в виде буквы W" class="main-logo">
